--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li class="specifics-link">
             <div class="svg-specifics">
               <svg class="svg-specifics-icon" width="65.32" height="70">
-              <use href="./images/icon.svg#antenna"></use>
+              <use href="./images/icons.svg#antenna"></use>
              </svg> 
             </div>
             <h3 class="specifics-title">Внимание к деталям</h3>
@@ -64,7 +64,7 @@
           <li class="specifics-link">
             <div class="svg-specifics">
             <svg class="svg-specifics-icon" width="66.96" height="70">
-              <use href="./images/icon.svg#clock"></use>
+              <use href="./images/icons.svg#clock"></use>
              </svg> 
             </div>
             <h3 class="specifics-title">Пунктуальность</h3>
@@ -76,7 +76,7 @@
           <li class="specifics-link">
             <div class="svg-specifics">
               <svg class="svg-specifics-icon" width="70" height="53.69">
-              <use href="./images/icon.svg#diagram"></use>
+              <use href="./images/icons.svg#diagram"></use>
              </svg> 
             </div>
             <h3 class="specifics-title">Планирование</h3>
@@ -88,7 +88,7 @@
           <li class="specifics-link">
             <div class="svg-specifics">
             <svg class="svg-specifics-icon" width="70" height="70">
-              <use href="./images/icon.svg#astronaut"></use>
+              <use href="./images/icons.svg#astronaut"></use>
              </svg> 
             </div>
             <h3 class="specifics-title">Современные технологии</h3>
@@ -338,32 +338,32 @@
           <li class="clients-item">
             <a href="" class="client-link">
               <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#group1"></use>
+              <use href="./images/icons.svg#logo"></use>
             </svg></a></li>
           <li class="clients-item">
             <a href="" class="client-link">
               <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#group2"></use>
+              <use href="./images/icons.svg#logo1"></use>
             </svg></a></li>
           <li class="clients-item">
             <a href="" class="client-link">
               <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#group3"></use>
+              <use href="./images/icons.svg#logo2"></use>
             </svg></a></li>
           <li class="clients-item">
             <a href="" class="client-link">
               <svg class="clients-icon" width="106px" height="60px" color="#2196F3" >
-              <use href="./images/icons.svg#group4"></use>
+              <use href="./images/icons.svg#logo3"></use>
             </svg></a></li>
             <li class="clients-item">
               <a href="" class="client-link">
                 <svg class="clients-icon"th="106px" height="60px">
-                <use href="./images/icons.svg#group5"></use>
+                <use href="./images/icons.svg#logo4"></use>
               </svg></a></li>
               <li class="clients-item">
                 <a href="" class="client-link">
                   <svg class="clients-icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#group6"></use>
+                  <use href="./images/icons.svg#logo5"></use>
                 </svg></a></li>
         </ul>
       </div>
@@ -408,6 +408,19 @@
               </svg></a></li>
               </ul>
         </div>
+      <div class="subscribe">
+        <p class="subscribe-title">Подпишитесь на рассылку</p>
+        <form name="subscribe-form">
+         <input class="subscribe-input" type="email" placeholder="E-mail"/>
+        </div>
+      <div class="subscribe-button-wrapper">
+         <button type="submit" class="subscribe-button">Подписаться</button>
+         <svg class="subscribe-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-send"/>
+         </svg>
+        </div>
+        </form>
+      </div>  
       </footer>
     </div>
       
@@ -418,6 +431,66 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form>
+          <div class="modal-field">
+           <label for="user-name" class="modal-label"> Имя </label>
+           <div class="input-wrap">
+          <input type="text" 
+          class="modal-input" 
+          name="user-name" 
+          placeholder=" " required />
+          <svg class="modal-icon"  width="18" height="18">
+            <use href="./images/icons.svg#person-black"></use>
+          </svg>
+        </div>
+              </div>
+          <div class="modal-field">
+           <label for="user-tel" class="modal-label"> Телефон </label>
+           <div class="input-wrap">
+          <input type="tel" 
+          class="modal-input" 
+          name="user-tel" 
+          placeholder=" " required />
+          <svg class="modal-icon"  width="18" height="18">
+            <use href="./images/icons.svg#phone-black"></use>
+          </svg>
+        </div>
+          </div>
+          <div class="modal-field">
+           <label for="user-email" class="modal-label"> Почта </label>
+           <div class="input-wrap">
+          <input type="email" 
+          class="modal-input" 
+          name="user-email" 
+          placeholder=" " required />
+          <svg class="modal-icon"  width="18" height="18">
+            <use href="./images/icons.svg#email-black"></use>
+          </svg>
+        </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-text" class="modal-label"> Комментарий </label>
+            <textarea name="" id="user-text" class="modal-text" placeholder="Введите текст"></textarea>
+              </div>
+
+          <div class="modal-field">
+            <input type="checkbox" 
+            name="privacy" 
+            value="true" 
+            class="modal-check visually-hidden "
+            id="privacy"/>
+            <label for="privacy" class="check-text">
+              <span>
+                <svg class="check-icon"  width="16" height="15">
+                  <use href="./images/icons.svg#vector2"></use>
+                </svg>  
+              </span>
+              Соглашаюсь с рассылкой и принимаю <a href="" class="contract">Условия договора</a></label>
+          </div>
+             
+          <button type="submit" class="button-send">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>  
