--- a/contact.html
+++ b/contact.html
@@ -64,22 +64,35 @@
         <ul class="join-list">
           <li class="join-item">
             <a href="https://www.instagram.com/" class="join-link"><svg class="join-icon" width="20px" height="20px">
-              <use href="./images/icons.svg#instagram"></use>
+              <use href="./images/icon.svg#instagram"></use>
             </svg></a></li>
           <li class="join-item">
             <a href="https://twitter.com/?lang=uk" class="join-link"><svg class="join-icon" width="20px" height="16.25px">
-              <use href="./images/icons.svg#twitter"></use>
+              <use href="./images/icon.svg#twitter"></use>
             </svg></a></li>
           <li class="join-item">
             <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="10px" height="20px">
-              <use href="./images/icons.svg#facebook"></use>
+              <use href="./images/icon.svg#facebook"></use>
             </svg></a></li>
           <li class="join-item">
             <a href="https://www.linkedin.com/check/manage-account" class="join-link"><svg class="join-icon" width="20px" height="20px">
-              <use href="./images/icons.svg#linkedin"></use>
+              <use href="./images/icon.svg#linkedin"></use>
             </svg></a></li>
             </ul>
       </div>
+    <div class="subscribe">
+      <p class="subscribe-title">Подпишитесь на рассылку</p>
+      <form name="subscribe-form">
+       <input class="subscribe-input" type="email" placeholder="E-mail"/>
+      </div>
+    <div class="subscribe-button-wrapper">
+       <button type="submit" class="subscribe-button">Подписаться</button>
+       <svg class="subscribe-icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-send"/>
+       </svg>
+      </div>
+      </form>
+    </div>  
     </footer>
     </div>
     
