--- a/portfolio.html
+++ b/portfolio.html
@@ -234,19 +234,19 @@
           <ul class="join-list">
             <li class="join-item">
               <a href="https://www.instagram.com/" class="join-link"><svg class="join-icon" width="20px" height="20px">
-                <use href="./images/icon.svg#instagram"></use>
+                <use href="./images/icons.svg#instagram"></use>
               </svg></a></li>
             <li class="join-item">
               <a href="https://twitter.com/?lang=uk" class="join-link"><svg class="join-icon" width="20px" height="16.25px">
-                <use href="./images/icon.svg#twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg></a></li>
             <li class="join-item">
               <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="10px" height="20px">
-                <use href="./images/icon.svg#facebook"></use>
+                <use href="./images/icons.svg#facebook"></use>
               </svg></a></li>
             <li class="join-item">
               <a href="https://www.linkedin.com/check/manage-account" class="join-link"><svg class="join-icon" width="20px" height="20px">
-                <use href="./images/icon.svg#linkedin"></use>
+                <use href="./images/icons.svg#linkedin"></use>
               </svg></a></li>
               </ul>
         </div>
