--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </li>
               <li class="team-soc-item">
                 <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="10" height="20">
+                  <svg class="team-soc-icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
@@ -219,7 +219,7 @@
                 </li>
               <li class="team-soc-item">
                 <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="10" height="20">
+                  <svg class="team-soc-icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
@@ -265,7 +265,7 @@
                 </li>
               <li class="team-soc-item">
                 <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="10" height="20">
+                  <svg class="team-soc-icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
@@ -311,7 +311,7 @@
                 </li>
               <li class="team-soc-item">
                 <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="10" height="20">
+                  <svg class="team-soc-icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook" >
                   </use>
                   </svg>
@@ -399,7 +399,7 @@
                 <use href="./images/icons.svg#twitter"></use>
               </svg></a></li>
             <li class="join-item">
-              <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="10px" height="20px">
+              <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="20px" height="23px">
                 <use href="./images/icons.svg#facebook"></use>
               </svg></a></li>
             <li class="join-item">
@@ -412,13 +412,12 @@
         <p class="subscribe-title">Подпишитесь на рассылку</p>
         <form name="subscribe-form">
          <input class="subscribe-input" type="email" placeholder="E-mail"/>
-        </div>
-      <div class="subscribe-button-wrapper">
-         <button type="submit" class="subscribe-button">Подписаться</button>
-         <svg class="subscribe-icon" width="24" height="24">
-          <use href="./images/icons.svg#icon-send"/>
-         </svg>
-        </div>
+          <button type="submit" class="subscribe-button">Подписаться 
+          <svg class="subscribe-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-send"/>
+           </svg>
+         </button>
+               </div>
         </form>
       </div>  
       </footer>
@@ -428,7 +427,7 @@
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="icon-close">
-            <use href="./images/icons.svg#close"></use>
+            <use href="./images/icons.svg#closeblack"></use>
           </svg>
         </button>
         <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
