--- a/portfolio.html
+++ b/portfolio.html
@@ -241,7 +241,7 @@
                 <use href="./images/icons.svg#twitter"></use>
               </svg></a></li>
             <li class="join-item">
-              <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="10px" height="20px">
+              <a href="https://m.facebook.com/" class="join-link"><svg class="join-icon" width="20px" height="23px">
                 <use href="./images/icons.svg#facebook"></use>
               </svg></a></li>
             <li class="join-item">
@@ -250,20 +250,19 @@
               </svg></a></li>
               </ul>
         </div>
-      <div class="subscribe">
-        <p class="subscribe-title">Подпишитесь на рассылку</p>
-        <form name="subscribe-form">
-         <input class="subscribe-input" type="email" placeholder="E-mail"/>
-        </div>
-      <div class="subscribe-button-wrapper">
-         <button type="submit" class="subscribe-button">Подписаться</button>
-         <svg class="subscribe-icon" width="24" height="24">
-          <use href="./images/icons.svg#icon-send"/>
-         </svg>
-        </div>
-        </form>
-      </div>  
-      </footer>
+        <div class="subscribe">
+          <p class="subscribe-title">Подпишитесь на рассылку</p>
+          <form name="subscribe-form">
+           <input class="subscribe-input" type="email" placeholder="E-mail"/>
+            <button type="submit" class="subscribe-button">Подписаться 
+            <svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"/>
+             </svg>
+           </button>
+                 </div>
+          </form>
+        </div>  
+        </footer>
       </div>
     
   
