goit-markup-hw-07

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   <body>
     <header class="header">
       <div class="container main-nav">
-        <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">Web<span class="header-color">Studio</span> </a>
-        <ul class="header-list">
-          <li class="header-item"><a href="./stydia.html" class="header-link current" style="color: #2196F3;" >Студия</a></li>
-          <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
-          <li class="header-item"><a href="./contact.html" class="header-link">Контакты</a></li>
+        <nav class="nav">
+        <a class="nav__logo link" href="./index.html">Web<span class="header-color">Studio</span> </a>
+        <ul class="nav__list">
+          <li class="nav__item"><a href="./stydia.html" class="nav__link current" style="color: #2196F3;" >Студия</a></li>
+          <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
+          <li class="nav__item"><a href="./contact.html" class="nav__link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contact">
-          <li class="contact-item">
-          <a href="mail:info@devstudio.com" class="contact-link"><svg class="contact-icon" width="16" height="12">
+          <li class="contact__item">
+          <a href="mail:info@devstudio.com" class="contact__link"><svg class="contact__icon" width="16" height="12">
             <use href="./images/icons.svg#envelope">
           </use>
           </svg>info@devstudio.com</a></li>
         
-        <li class="contact-item">
-            <a href="tek:+380961111111" class="contact-link"><svg class="contact-icon" width="10" height="16">
+        <li class="contact__item">
+            <a href="tek:+380961111111" class="contact__link"><svg class="contact__icon" width="10" height="16">
             <use href="./images/icons.svg#smartphone" >
           </use>
           </svg>+38 096 111 11 11</a></li>
@@ -41,58 +41,58 @@
     <main>
         <section class="hero">
           <div class="container">
-        <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
-        <button  type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
+        <h1 class="hero__text">Эффективные решения для вашего бизнеса</h1>
+        <button  type="button" class="hero__btn" data-modal-open>Заказать услугу</button>
           </div>
       </section>
       <section class="specifics">
         <div class="container"> 
-        <h2 class="specifics-text">Особенности нашего бизнеса</h2>
-        <ul class="specifics-list">
-          <li class="specifics-link">
-            <div class="svg-specifics">
-              <svg class="svg-specifics-icon" width="65.32" height="70">
+        <h2 class="specifics__text">Особенности нашего бизнеса</h2>
+        <ul class="specifics__list">
+          <li class="specifics__link">
+            <div class="specifics__svg">
+              <svg class="specifics__icon" width="65.32" height="70">
               <use href="./images/icons.svg#antenna"></use>
              </svg> 
             </div>
-            <h3 class="specifics-title">Внимание к деталям</h3>
-            <p class="specifics-par">
+            <h3 class="specifics__title">Внимание к деталям</h3>
+            <p class="specifics__par">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="specifics-link">
-            <div class="svg-specifics">
-            <svg class="svg-specifics-icon" width="66.96" height="70">
+          <li class="specifics__link">
+            <div class="specifics__svg">
+            <svg class="specifics__icon" width="66.96" height="70">
               <use href="./images/icons.svg#clock"></use>
              </svg> 
             </div>
-            <h3 class="specifics-title">Пунктуальность</h3>
-            <p class="specifics-par">
+            <h3 class="specifics__title">Пунктуальность</h3>
+            <p class="specifics__par">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="specifics-link">
-            <div class="svg-specifics">
-              <svg class="svg-specifics-icon" width="70" height="53.69">
+          <li class="specifics__link">
+            <div class="specifics__svg">
+              <svg class="specifics__icon" width="70" height="53.69">
               <use href="./images/icons.svg#diagram"></use>
              </svg> 
             </div>
-            <h3 class="specifics-title">Планирование</h3>
-            <p class="specifics-par">
+            <h3 class="specifics__title">Планирование</h3>
+            <p class="specifics__par">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="specifics-link">
-            <div class="svg-specifics">
-            <svg class="svg-specifics-icon" width="70" height="70">
+          <li class="specifics__link">
+            <div class="specifics__svg">
+            <svg class="specifics__icon" width="70" height="70">
               <use href="./images/icons.svg#astronaut"></use>
              </svg> 
             </div>
-            <h3 class="specifics-title">Современные технологии</h3>
-            <p class="specifics-par">
+            <h3 class="specifics__title">Современные технологии</h3>
+            <p class="specifics__par">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -102,38 +102,38 @@
       </section>
         <section class="about">
         <div class="container">
-        <h2 class="about-text">Чем мы занимаемся</h2>
-        <ul class="about-list">
-          <li class="about-item">
+        <h2 class="about__text">Чем мы занимаемся</h2>
+        <ul class="about__list">
+          <li class="about__item">
             <img
               src="./images/img1.1.jpg"
               alt="розробка веб додатків"
               width="370"
               height="294"
             />
-            <div class="about-icon-text">
+            <div class="about__icontext">
               <p>Десктопные приложения</p>
             </div>
           </li>
-          <li class="about-item">
+          <li class="about__item">
             <img
               src="./images/img1.2.jpg"
               alt="розробка мобільних додатків"
               width="370"
               height="294"
             />
-            <div class="about-icon-text">
+            <div class="about__icontext">
               <p>Мобильные приложения</p>
             </div>
           </li>
-          <li class="about-item">
+          <li class="about__item">
             <img
               src="./images/img1.3.jpg"
               alt="дизайнерські рішення"
               width="370"
               height="294"
             />
-            <div class="about-icon-text">
+            <div class="about__icontext">
               <p>Дизайнерские решения</p>
             </div>
           </li>
@@ -142,46 +142,46 @@
       </section>
         <section class="team">
         <div class="container">    
-        <h2 class="team-text">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
+        <h2 class="team__text">Наша команда</h2>
+        <ul class="team__list">
+          <li class="team__item">
             <img
               src="./images/img-1-min.jpg"
               alt="Дизайнер"
               width="270"
               height="260"
             />
-            <div class="team-name-prof">
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p lang="en" class="team-prof">Product Designer</p>
-            <ul class="team-soc-list">
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+            <div class="employees">
+            <h3 class="employees__name">Игорь Демьяненко</h3>
+            <p lang="en" class="employees__prof">Product Designer</p>
+            <ul class="employees__list">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="16">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="16">
                     <use href="./images/icons.svg#twitter">
                   </use>
                   </svg>
                 </a>
                 </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="23">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon"  width="20" height="20">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon"  width="20" height="20">
                     <use href="./images/icons.svg#linkedin">
                   </use>
                   </svg>
@@ -190,44 +190,44 @@
             </ul>
           </div>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/img-2-min.jpg"
               alt="Front-end розробник"
               width="270"
               height="260"
             />
-            <div class="team-name-prof">
-            <h3 class="team-name">Ольга Репина</h3>
-            <p lang="en" class="team-prof">Frontend Developer</p>
-            <ul class="team-soc-list">
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+            <div class="employees">
+            <h3 class="employees__name">Ольга Репина</h3>
+            <p lang="en" class="employees__prof">Frontend Developer</p>
+            <ul class="employees__list">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="16">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="16">
                     <use href="./images/icons.svg#twitter">
                   </use>
                   </svg>
                 </a>
                 </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="23">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin">
                   </use>
                   </svg>
@@ -236,44 +236,44 @@
             </ul>
           </div>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/img-3-min.jpg"
               alt="Маркетинг"
               width="270"
               height="260"
             />
-            <div class="team-name-prof">
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p lang="en" class="team-prof">Marketing</p>
-            <ul class="team-soc-list">
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+            <div class="employees">
+            <h3 class="employees__name">Николай Тарасов</h3>
+            <p lang="en" class="employees__prof">Marketing</p>
+            <ul class="employees__list">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="16">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="16">
                     <use href="./images/icons.svg#twitter">
                   </use>
                   </svg>
                 </a>
                 </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="23">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin">
                   </use>
                   </svg>
@@ -282,44 +282,44 @@
             </ul>
           </div>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/img-4-min.jpg"
               alt="UI дизайнер"
               width="270"
               height="260"
             />
-            <div class="team-name-prof">
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p lang="en" class="team-prof">UI Designer</p>
-            <ul class="team-soc-list">
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+            <div class="employees">
+            <h3 class="employees__name">Михаил Ермаков</h3>
+            <p lang="en" class="employees__prof">UI Designer</p>
+            <ul class="employees__list">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram">
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="16">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="16">
                     <use href="./images/icons.svg#twitter">
                   </use>
                   </svg>
                 </a>
                 </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="23">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="23">
                     <use href="./images/icons.svg#facebook" >
                   </use>
                   </svg>
                 </a>
               </li>
-              <li class="team-soc-item">
-                <a href="" class="team-soc-link">
-                  <svg class="team-soc-icon" width="20" height="20">
+              <li class="employees__item">
+                <a href="" class="employees__link">
+                  <svg class="employees__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin">
                   </use>
                   </svg>
