goit-markup-hw-07

--- a/contact.html
+++ b/contact.html
@@ -10,28 +10,29 @@
     <title>contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/main.min.css">
     
 </head>
 <body>
   <header class="header">
     <div class="container main-nav">
-      <nav class="header-nav">
-      <a class="header-logo link" href="./index.html">Web<span class="header-color">Studio</span> </a>
-      <ul class="header-list">
-        <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
-        <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
-        <li class="header-item"><a href="./contact.html" class="header-link current" style="color: #2196F3;" >Контакты</a></li>
+      <nav class="nav">
+      <a class="nav__logo link" href="./index.html">Web<span class="header-color">Studio</span> </a>
+      <ul class="nav__list">
+        <li class="nav__item"><a href="./index.html" class="nav__link">Студия</a></li>
+        <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
+        <li class="nav__item"><a href="./contact.html" class="nav__link current" style="color: #2196F3;" >Контакты</a></li>
       </ul>
     </nav>
     <ul class="contact">
-        <li class="contact-item">
-        <a href="mail:info@devstudio.com" class="contact-link"><svg class="contact-icon" width="16" height="12">
+        <li class="contact__item">
+        <a href="mail:info@devstudio.com" class="contact__link"><svg class="contact__icon" width="16" height="12">
           <use href="./images/icons.svg#envelope">
         </use>
         </svg>info@devstudio.com</a></li>
       
-      <li class="contact-item">
-          <a href="tek:+380961111111" class="contact-link"><svg class="contact-icon" width="10" height="16">
+      <li class="contact__item">
+          <a href="tek:+380961111111" class="contact__link"><svg class="contact__icon" width="10" height="16">
           <use href="./images/icons.svg#smartphone" >
         </use>
         </svg>+38 096 111 11 11</a></li>
